fix for buy-now logo sizing and spacing alignments

--- a/blocks/accordion/accordion.css
+++ b/blocks/accordion/accordion.css
@@ -131,7 +131,7 @@ main .section .accordion-wrapper {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
   .section.accordion-container > div.default-content-wrapper {
     padding: 0 0 30px;
   }
